--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -40,7 +40,7 @@ jobs:
       uses: zgosalvez/github-actions-report-lcov@v1
       if: github.event_name == 'pull_request'
       with:
-        coverage-files: ./coverage/lcov.*.info
+        coverage-files: ./coverage/lcov.info
         minimum-coverage: 90
         artifact-name: code-coverage-report
         github-token: ${{ secrets.GITHUB_TOKEN }}
