--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "type": "module",
   "license": "Unlicense",
   "scripts": {
-    "test:coverage": "c8 ava --timeout=360s"
+    "test:coverage": "c8 --check-coverage --per-file --lines=95 ava --timeout=360s"
   },
   "dependencies": {
     "fastify": "^4.4.0",
