--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "fastify": "^4.8.1",
+    "fluent-json-schema": "3.1.0",
     "got": "11.0.3",
     "tslib": "^2.4.0"
   },
