--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "tslib": "^2.4.0"
   },
   "devDependencies": {
-    "@types/node": "^18.7.1",
+    "@types/node": "17.0.45",
     "ava": "^4.3.1",
     "c8": "^7.12.0",
     "ts-node-dev": "^2.0.0",
