--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "fastify": "^4.8.1",
     "fluent-json-schema": "3.1.0",
     "got": "11.8.5",
+    "tsd": "0.23.0",
     "tslib": "^2.4.0"
   },
   "devDependencies": {
