--- a/package.json
+++ b/package.json
@@ -10,14 +10,14 @@
   },
   "dependencies": {
     "fastify": "^4.8.1",
-    "fastify-csrf": "3.0.1",
-    "fluent-json-schema": "3.1.0",
-    "got": "11.8.5",
-    "tsd": "0.23.0",
+    "fastify-csrf": "^3.0.1",
+    "fluent-json-schema": "^3.1.0",
+    "got": "^11.8.5",
+    "tsd": "^0.23.0",
     "tslib": "^2.4.0"
   },
   "devDependencies": {
-    "@types/node": "17.0.45",
+    "@types/node": "^17.0.45",
     "ava": "^4.3.1",
     "c8": "^7.12.0",
     "ts-node-dev": "^2.0.0",
